--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,4 +18,4 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: " " }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href=" " rel="nofollow"> </a>.</div>
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: " " }} <a href=" " rel="nofollow"> </a> &amp; <a href=" " rel="nofollow"> </a>.</div>
